[package]
name = "yummy"
version = "0.0.1"
authors = ["Justin Gross <justin@jgross.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3.0"
async-walkdir = "0.2.0"
configparser = "2.0"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
futures = { version = "0.3", default-features = false }
num_cpus = "1.13.0"
quick-xml= { version = "0.22.0", features = [ "serialize" ] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
strum = "0.20"
strum_macros = "0.20"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-tower = "0.5.1"
tower = { version = "0.4.5", features = ["full"] }
tower-service = "0.3.1"
tracing = "0.1.22"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-clippy"]


[[bin]]
name = "yummy"
path = "src/bin/main.rs"